# genesis

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/: debug-runtime-issue.md  feature-impact-analysis.md  full-stack-trace.md  onboard.md
.cursor/rules/: mcp-routing.mdc
docs/: genesis-commands.md  genesis-story.md  nitzotz.md  usage-guide.md
monitor_ui/src/: api.ts
monitor_ui/src/lib/: staleness.ts  useRunCheckpoints.ts
scripts/: check_jeevy_drift.py  muther.sh  ouroboros.sh
src/chimera/: __init__.py  install.py  log.py  pidlock.py
src/chimera/cli/: __init__.py  cli.py  config.py  runners.py
src/chimera/config/: __init__.py
src/chimera/core/: state.py
src/chimera/graphs/: __init__.py  clr.py  hvd.py  hypervisor.py  pde.py  refiner.py  spr4.py  supervisor.py
src/chimera/monitor/: anomalies.py  cli.py  server.py
src/chimera/nodes/: __init__.py  gemini_assist.py  hvd_dispatcher.py
src/chimera/server/: mcp.py  monitor_tools.py
src/chimera/subgraphs/: implementation.py  planning.py  research.py  review.py
src/genesis/: pidlock.py
src/genesis/cli/: cli.py  config.py  prompts.py  runners.py  state.py
src/genesis/config/: __init__.py  loader.py  models.py  router.py
src/genesis/core/: clr_memory.py  directives.py  evolution_memory.py  fitness.py  guards.py  memory.py  resource_control.py  state.py
src/genesis/graphs/: __init__.py  aril.py  chayah.py  clr.py  ein_sof.py  hvd.py  leviathan.py  muther.py  nefesh.py  nitzotz.py  ouroboros.py  pde.py  spr4.py  supervisor.py
src/genesis/nodes/: __init__.py  architect.py  critic.py  ein_sof_dispatch.py  gemini_assist.py  human_review.py  hvd_dispatcher.py  (+8 more)
tasks/: BUILD-ORDER.md  architecture-patterns-technical.md  architecture-patterns.md  genesis.md
tasks/aril/: IMPLEMENTATION.md
tasks/fibonacci/: DESIGN.md  IMPLEMENTATION.md  TODO.md
tasks/otiyot/: IMPLEMENTATION.md  TODO.md
tasks/ouroboros/: DESIGN.md  TODO.md
tasks/promethean/: IMPLEMENTATION.md
tasks/revelation/: DESIGN.md  TODO.md
tasks/sefirot/: DESIGN.md  TODO.md
tests/: test_implementation_loop.py  test_pidlock.py  test_roots.py
tests/monitor/: test_anomalies.py  test_api_routes.py  test_ast_walker.py  test_binding.py  test_discovery.py  test_extras_missing.py  test_introspector.py  test_metadata.py  test_redaction.py  test_smoke.py  test_state_decoder.py
(+77 files in other folders)
